Fix editor z-index

--- a/maze-generator/src/SideEditor/style.css
+++ b/maze-generator/src/SideEditor/style.css
@@ -4,4 +4,6 @@
   flex: 1;
   align-items: center;
   justify-content: flex-start;
+  background-color: var(--joy-palette-background-surface);
+  z-index: 999;
 }
